--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "next build",
-    "check": "next lint && tsc --noEmit",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
-    "dev:db:spawn": "./start-database.sh",
-    "dev:db:kill": "docker stop $DB_CONTAINER_NAME",
-    "dev": "next dev --turbo",
+    "with-env": "env-cmd -f .env.${NODE_ENV}",
+    "build": "bun run with-env -- next build",
+    "check": "bun run with-env -- next lint && tsc --noEmit",
+    "db:generate": "bun run with-env -- drizzle-kit generate",
+    "db:migrate": "bun run with-env -- drizzle-kit migrate",
+    "db:push": "bun run with-env -- drizzle-kit push",
+    "db:studio": "bun run with-env -- drizzle-kit studio",
+    "dev:db:spawn": "bun run with-env -- ./start-database.sh",
+    "dev:db:kill": "bun run with-env -- docker stop $DB_CONTAINER_NAME",
+    "dev": "bun run with-env -- next dev --turbo",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "preview": "next build && next start",
-    "start": "next start",
+    "preview": "bun run next build && bun run next start",
+    "start": "bun run next start",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -48,6 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "drizzle-kit": "^0.24.0",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.1",
     "eslint-plugin-drizzle": "^0.2.3",
